Make sure the text part of content stretches to the bottom

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -152,7 +152,7 @@
     float: left;
     position: absolute;
     left: 0;
-    top: 0;
+    bottom: 0;
     z-index: 10000;
     width: 100%;
     background: #f9f9f9 url(../images/white_texture.png) repeat top left;
